feat: 사용자 추가 정보 입력 기능 구현